# cdf-dioxus

./: Cargo.toml  Dockerfile  build.rs
.github/workflows/: release.yml
files/: app.css  app.js
libs/dioxus-toast/: Cargo.toml
libs/icon-packages/codegen/: Cargo.toml
libs/icon-packages/example/: Cargo.toml
libs/icon-packages/example/src/: main.rs
libs/icon-packages/lib/: Cargo.toml
libs/icon-packages/lib/src/icons/: io_icons.rs
src/: http_server.rs  lang.rs  main.rs  session_token.rs  settings_reader.rs  static_resources.rs  validators.rs
src/actions/: mod.rs  select_account.rs
src/app/: app_ctx.rs
src/grpc_client/: accounts_manager_grpc_client.rs  favorite_instruments_grpc_client.rs  key_value_grpc_client.rs  mod.rs  trader_credentials_grpc_client.rs
src/states/: accounts_state.rs  bid_ask_snapshot.rs  fav_instruments_state.rs  global_state.rs  instruments_state.rs  main_form_state.rs  mod.rs  trading_panel_state.rs
src/types/: account_id.rs  balance.rs  bid_ask.rs  currency.rs  instrument.rs  instrument_id.rs  mod.rs  request_fail.rs  trader_account.rs  trader_id.rs  web_or_mobile.rs
src/view_models/: mod.rs  select_instrument_view_model.rs
src/views/: error_mappers.rs  fav_instruments_panel.rs  forgot_password_link.rs  icons.rs  loading_form.rs  login_form.rs  main_form.rs  mod.rs  reset_password_form.rs  sign_up_form.rs  trading_panel.rs
src/views/main_form/: account_balance.rs  deposit_button.rs  left_panel.rs  main_form.rs  mod.rs  profile_button.rs
src/views/main_form/left_panel/: left_panel.rs  left_panel_data.rs  left_panel_instruments.rs  left_panel_state.rs  mod.rs
src/views/settings_form/: balance_history_frame.rs  change_password_frame.rs  mod.rs  settings_form.rs  settings_menu.rs
src/views/settings_form/withdraw_frame/: bank_transfer_frame.rs  mod.rs  withdraw_frame.rs  withdraw_history_frame.rs
src/views/trading_from/: mod.rs  pnl_calculator.rs  pnl_calculator_button.rs  render_trading_form.rs  set_auto_close.rs  set_price_panel.rs  trading_panel.rs
src/views/trading_from/pnl_calculator/: mod.rs  pnl_calculator_button.rs  pnl_calculator_panel.rs
src/views/widgets/: account_balance_widget.rs  mod.rs  real_demo_badge.rs  select_account_widget.rs
src/views/widgets/faw_instruments/: fav_instruments_widget.rs  mod.rs  render_add_button.rs  render_avatar.rs  render_instrument.rs  render_rate.rs  select_instrument_panel.rs  select_instrument_widget.rs
