[package]
name = "dioxus-toast"
version = "0.2.0"
authors = ["YuKun Liu <mrxzx.info@gmail.com>"]
repository = "https://github.com/mrxiaozhuox/dioxus-toast"
license = "MIT"
description = "Add toast support in your dioxus project"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["desktop"]

desktop = ["tokio", "dioxus-desktop"]

web = ["gloo-timers", "dioxus-web"]

[dependencies]
chrono = { version = "0.4.23", features = ["wasmbind"] }
dioxus = { version = "*" }
dioxus-web = { version = "*", optional = true }
dioxus-desktop = { version = "*", optional = true }
fermi = { version = "*" }
tokio = { version = "*", features = ["time"], optional = true }
gloo-timers = { version = "0.2.6", features = ["futures"], optional = true }
