[package]
name = "hello-dioxus"
version = "0.1.0"
authors = ["nissy-dev <nd.12021218@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "*" }
dioxus-web = { version = "*" }
dioxus-free-icons = { path = "../lib", features = ["font-awesome-brands"] }

log = "*"

# WebAssembly Debug
wasm-logger = "*"
console_error_panic_hook = "*"

[profile.release]
lto = true
opt-level = 's'
